services/media-services/sonarr/resources/deployment-sonarr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media-sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
              name: sonarr
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: media
          persistentVolumeClaim:
            claimName: sonarr-media
        - name: downloads
          persistentVolumeClaim:
            claimName: sonarr-downloads
