services/media-services/sonarr/resources/service-sonarr.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media-sonarr
spec:
  ports:
    - name: sonarr
      port: 8989
      targetPort: 8989
  selector:
    app: sonarr
