services/media-services/sonarr/resources/ingress-sonarr.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media-sonarr
  
spec:
  entryPoints:
    - websecure
    - web

  routes:
    - match: Host(`sonarr.nebulanet.xyz`)
      kind: Rule
      services:
        - name: sonarr
          kind: Service
          port: 8989
  tls:
    secretName: sonarr-tls
